[tool.poetry]
name = "eventex"
version = "0.1.0"
description = ""
authors = ["Gilson Filho <me@gilsondev.in>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"
python-decouple = "^3.6"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
whitenoise = "^6.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"

[tool.black]
line-length = 110
target-version = ['py39']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
